--- a/template.conf
+++ b/template.conf
@@ -32,6 +32,7 @@
     "footer.less",
     "header.less",
     "index.less",
+    "structure.less",
     "mobile-styles.less",
     "tweak.less",
     "ui-icons.less",
