--- a/template.conf
+++ b/template.conf
@@ -36,7 +36,8 @@
     "mobile-styles.less",
     "tweak.less",
     "ui-icons.less",
-    "util.less"
+    "util.less",
+    "test.less"
   ],
   "systemCollections": [
     "blog",
